--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
                             <div class="banner_text_iner">
                                 <h1>The Best GAME Ever</h1>
                                 <p> Embark on a journey through intricately designed mazes, overcome challenges, and reach the elusive exit. Whether you're a game development enthusiast, a programmer honing your skills, or simply someone who loves a good maze challenge, this project is for you!</p>
-                                <a href="#" class="btn_1">Watch Video</a>
+                                <a href="https://github.com/reddeath1/Mazona/releases/tag/mazona" class="btn_1">Install Now</a>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 mx-5">
+                        <video src="./vid/1.mp4" autoplay controls></video>
                     </div>
                 </div>
             </div>
