--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                                     </li>
 
                                     <li class="nav-item">
+                                        <a class="nav-link" href="#about_us">About us</a>
+                                    </li>
+
+                                    <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact</a>
                                     </li>
                                 </ul>
@@ -73,16 +77,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12 mx-5">
-                        <video src="./vid/1.mp4" autoplay controls></video>
+                    <div class="col-lg-4 col-sm-12" id="vid" style="margin-right: 100px">
+                        <video controls autoplay>
+                            <source src="./vid/1.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
         </section>
         <!-- banner part start-->
 
+
+        <!-- about_us part start-->
+        <section class="about_us section_padding" id="about_us">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-md-5 col-lg-6 col-xl-6">
+                        <div class="learning_img">
+                            <img src="img/gallery/3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-7 col-lg-6 col-xl-5">
+                        <div class="about_us_text">
+                            <h2>About us</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. </p>
+                            <a href="https://github.com/reddeath1/Mazona/releases/tag/mazona" class="btn_1">Install Now</a>
+                            <a href="#vid" class="btn_1">Watch Video</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- about_us part end-->
+
         <!-- gallery_part part start-->
-        <section class="gallery_part section_padding">
+        <section class="gallery_part section_padding py-lg-5">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
