--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
                     <div class="col-md-7 col-lg-6 col-xl-5">
                         <div class="about_us_text">
                             <h2>About us</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit sed do eiusmod tempor incididunt ut labore et
-                                dolore magna aliqua. </p>
+                            <p>Welcome to MAZONA(The Maze Project), an exciting venture into the world of 3D game!
+                                This project is designed to unlock the mysteries of creating captivating virtual mazes using cutting-edge raycasting technology.</p>
+                            <p>The project invites individuals to embark on a creative odyssey,
+                                where each line of code contributes to the realization of a virtual maze that promises both fun and learning</p>
                             <a href="https://github.com/reddeath1/Mazona/releases/tag/mazona" class="btn_1">Install Now</a>
                             <a href="#vid" class="btn_1">Watch Video</a>
                         </div>
