--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 where each line of code contributes to the realization of a virtual maze that promises both fun and learning</p>
                             <h3>Team</h3>
                             <p>Frank Galos</p>
-                            <br><h4><a href="https://github.com/reddeath1">Github</a></h4><br>
+                            <h4><a href="https://github.com/reddeath1">Github</a></h4><br>
 
                             <a href="https://github.com/reddeath1/Mazona/releases/tag/mazona" class="btn_1">Install Now</a>
                             <a href="#vid" class="btn_1">Watch Video</a>
